<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_user_info_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/rl_show_my_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top|start"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/user_info_head_container"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="top|start">

                <ImageView
                    android:id="@+id/iv_logo_setting"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical|left"
                    android:layout_margin="4dp"
                    android:contentDescription="@null"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/btn_setting" />

                <ImageView
                    android:id="@+id/iv_logo_zxing"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_margin="4dp"
                    android:padding="12dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/btn_qrcode" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/user_info_icon_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/iv_portrait"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@mipmap/head_icon" />

                <ImageView
                    android:id="@+id/iv_gender"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="@dimen/space_3"
                    android:layout_marginRight="@dimen/space_3"
                    android:src="@mipmap/ic_male" />
            </FrameLayout>

            <TextView
                android:id="@+id/tv_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="thanatosx" />

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="这个人很懒,什么都没有写..."
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:text="积分 0"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/ly_about_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/user_home_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout style="@style/user_home_info_counts_item">

            <TextView
                android:id="@+id/tv_tweet"
                style="@style/user_home_info_num"
                android:text="0" />

            <TextView
                style="@style/user_home_info_text"
                android:layout_marginBottom="6dp"
                android:text="@string/user_home_item_tweet" />
        </LinearLayout>

        <LinearLayout style="@style/user_home_info_counts_item">

            <TextView
                android:id="@+id/tv_favorite"
                style="@style/user_home_info_num"
                android:text="0" />

            <TextView
                style="@style/user_home_info_text"
                android:layout_marginBottom="6dp"
                android:text="@string/user_home_item_favorite" />
        </LinearLayout>

        <LinearLayout style="@style/user_home_info_counts_item">

            <TextView
                android:id="@+id/tv_follow_count"
                style="@style/user_home_info_num"
                android:text="0" />

            <TextView
                style="@style/user_home_info_text"
                android:layout_marginBottom="6dp"
                android:text="@string/user_home_item_following" />
        </LinearLayout>

        <LinearLayout
            style="@style/user_home_info_counts_item"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_follower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="4dp"
                    android:padding="0dp"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_26" />

                <View
                    android:id="@+id/user_info_notice_fans"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="right|top"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/ic_red_dot_shape"
                    android:visibility="invisible" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView4"
                style="@style/user_home_info_text"
                android:text="@string/user_home_item_fans" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical">

        <FrameLayout style="@style/ripple_wh_match_match">

            <RelativeLayout style="@style/user_option_item">

                <ImageView
                    android:id="@+id/iv_msg"
                    style="@style/user_option_item_left_img"
                    android:src="@mipmap/ic_user_messege" />

                <TextView
                    android:id="@+id/tv_msg"
                    style="@style/user_option_item_left_text"
                    android:layout_toRightOf="@+id/iv_msg"
                    android:text="我的消息" />

                <View
                    android:id="@+id/user_info_notice_message"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_toRightOf="@+id/tv_msg"
                    android:background="@drawable/ic_red_dot_shape"
                    android:visibility="invisible" />

                <ImageView style="@style/user_option_item_right_img" />
            </RelativeLayout>

            <View style="@style/user_option_item_divider" />
        </FrameLayout>

        <FrameLayout style="@style/ripple_wh_match_match">

            <RelativeLayout style="@style/user_option_item">

                <ImageView
                    android:id="@+id/iv_blog"
                    style="@style/user_option_item_left_img"
                    android:src="@mipmap/ic_user_blog" />

                <TextView
                    android:id="@+id/tv_blog"
                    style="@style/user_option_item_left_text"
                    android:layout_toRightOf="@+id/iv_blog"
                    android:text="我的博客" />

                <ImageView style="@style/user_option_item_right_img" />
            </RelativeLayout>

            <View style="@style/user_option_item_divider" />
        </FrameLayout>

        <FrameLayout style="@style/ripple_wh_match_match">

            <RelativeLayout style="@style/user_option_item">

                <ImageView
                    android:id="@+id/iv_active"
                    style="@style/user_option_item_left_img"
                    android:src="@mipmap/ic_user_event" />

                <TextView
                    android:id="@+id/tv_active"
                    style="@style/user_option_item_left_text"
                    android:layout_toRightOf="@+id/iv_active"
                    android:text="我的活动" />

                <ImageView style="@style/user_option_item_right_img" />
            </RelativeLayout>

            <View style="@style/user_option_item_divider" />
        </FrameLayout>

        <FrameLayout style="@style/ripple_wh_match_match">

            <RelativeLayout style="@style/user_option_item">

                <ImageView
                    android:id="@+id/iv_team"
                    style="@style/user_option_item_left_img"
                    android:src="@mipmap/ic_user_team" />

                <TextView
                    android:id="@+id/tv_team"
                    style="@style/user_option_item_left_text"
                    android:layout_toRightOf="@+id/iv_team"
                    android:text="我的团队" />

                <ImageView style="@style/user_option_item_right_img" />
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>